# documind-gradient

./: .env.example  README.md  railway.json
backend/: Dockerfile  main.py  pyproject.toml
frontend/: package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
