[project]
name = "documind-backend"
version = "1.0.0"
description = "DocuMind AI codebase documentation backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "openai>=1.14.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
